--- a/style.css
+++ b/style.css
@@ -3,7 +3,9 @@
     padding: 0;
     margin: 0;
 }
-
+body{
+    overflow-x: hidden;
+}
 
 #navbar{
     position: sticky;
@@ -51,7 +53,7 @@ grid-template-columns: 65% 33%;
 }
 .content{
     display:grid;
-    grid-template-columns: 49% 49%;
+    grid-template-columns: 50% 50%;
 }
 .content .img img{
     height:550px;
@@ -69,6 +71,8 @@ grid-template-columns: 65% 33%;
 }
 .project .upper{
     padding: 2rem;
+    display: grid;
+    grid-template-columns: 48% 48%;
 }
 .project .upper .left {
     text-align: center;
@@ -76,12 +80,12 @@ grid-template-columns: 65% 33%;
     justify-content: center;
     align-items: center;
     font-size:40px;
-    padding: 2rem;
-    height:400px;
+     height:400px;
     width: 500px;
     background-color: yellow;
     color: darkblue;
-    margin: 2rem 1rem 1rem 4rem;
+    /* margin: 2rem 1rem 1rem 4rem; */
+    padding:2rem;
   
 }
 .project .upper .left:hover{
@@ -93,8 +97,35 @@ grid-template-columns: 65% 33%;
     from {height:400px;
         width:500px;
     }
-    to {height:300px;
-    width:300px;
+    to {height:350px;
+    width:425px;
+font-size:56px;}
+  }
+.project .upper .right {
+    text-align: center;
+    display:flex;   
+    justify-content: center;
+    align-items: center;
+    font-size:40px;
+    padding: 2rem;
+    height:460px;
+    width: 560px;
+    background-color: yellow;
+    color: darkblue;
+    /* margin: 2rem 3rem 1rem 4rem; */
+  
+}
+.project .upper .right:hover{
+    animation-name: exampl;
+    animation-duration: 4s;
+    animation-iteration-count: 1;
+}
+@keyframes exampl {
+    from {height:460px;
+        width:560px;
+    }
+    to {height:400px;
+    width:500px;
 font-size:56px;}
   }
 
