--- a/styles/style.css
+++ b/styles/style.css
@@ -110,7 +110,7 @@ grid-template-columns: 65% 33%;
     padding-right: 2.4px;
     margin-right: 3.6rem;
 }
-.project{
+/* .project{
     background-color:black;
     display:flex;
     justify-content:center;
@@ -143,7 +143,7 @@ width: 100%;
     width: 500px;
     background-color: yellow;
     color: darkblue;
-    /* margin: 2rem 1rem 1rem 4rem; */
+    
     padding:2rem;
     margin: 2rem;
 margin-left: 2.4rem;  
@@ -160,8 +160,60 @@ margin-left: 2.4rem;
     to {height:350px;
     width:425px;
 font-size:56px;}
-  }
-.project .upper .right {
+  }*/
+  .projects{
+    background-color: black;
+    padding-left: 4rem;
+    padding-top: 12rem;
+    color: white;
+}
+.projects .p{
+    margin-top:-5.5rem;
+    
+}
+.project-work{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    overflow-x: hidden;
+    
+}
+.first-img img{
+    max-width: 80%;
+    max-height: 80%;
+    transform: scale(1);
+	transition: 0.4s ease-in-out;
+
+    
+}
+.second-img img{
+    max-width: 90%;
+    max-height: 90%;
+    transform: scale(1);
+	transition: 0.4s ease-in-out;
+
+    
+}
+.second-img:hover img{
+    transform: scale(0.95);
+    
+}
+.first-img:hover img{
+    transform: scale(0.9);
+    
+}
+.project-main-text{
+    padding: 2% 0 2% 0;
+    font-size: 120%;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.project-sub-text{
+    padding: 2% 0 2% 0;
+    font-size: 120%;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #707070;
+} 
+/* .project .upper .right {
     text-align: center;
     display:flex;   
     justify-content: center;
@@ -174,10 +226,9 @@ font-size:56px;}
     color: white;
     margin-left: 1rem;
     margin: 2rem;
-    /* margin: 2rem 3rem 1rem 4rem; */
-  
-}
-.project .upper .right:hover{
+     margin: 2rem 3rem 1rem 4rem;} */
+
+/* .project .upper .right:hover{
     animation-name: exampl;
     animation-duration: 4s;
     animation-iteration-count: 1;
@@ -210,7 +261,7 @@ font-size:56px;}
     background-color: darkblue;
     color: white;
     margin-top: -2.6rem !important;
-    /* margin: 2rem 1rem 1rem 4rem; */
+    
     padding:2rem;
     margin: 2rem;
 margin-left: 2rem;  
@@ -243,10 +294,10 @@ font-size:56px;}
     
     margin: 2.4rem;
     margin-top: -2.6rem;
-    /* margin: 2rem 3rem 1rem 4rem; */
+    
   
-}
-.projec .down .right:hover{
+} */
+/* .projec .down .right:hover{
     animation-name: example3;
     animation-duration: 4s;
     animation-iteration-count: 1;
@@ -258,11 +309,11 @@ font-size:56px;}
     to {height:350px;
     width:425px;
 font-size:56px;}
-  }
+  } */ 
   .design{
       background-color:#dbdbdb;
       color:black;
-      height:13.5rem;
+      height:15.5rem;
       width:100%;
 
   }
@@ -288,13 +339,14 @@ font-size:56px;}
 
 .desig:hover{
     color:black;
-    background-image: url(../images/gaga.jpg);
+    background-image: url(../images/gaga.jpg) ;
 }
 .foot{
     height:25rem;
     width:100%;
     background-color:#d2d2d2;
     display:flex;
+    transition: 3s,ease-in;
 }
 .foot .logo{
     color: black;
@@ -312,7 +364,20 @@ font-size:56px;}
     margin-left: 18rem;
 }
 .foot .dash:hover{
-    display: none;
+    animation-name: hh;
+    animation-duration: 4s;
+    animation-iteration-count: 1;
+display: none;    
+
+}
+.say:hover .dash{
+    display:none;
+}
+.dash:hover{
+    display:none;
+}
+.desig p:hover .dash{
+    display:none;
 }
  .last{
     height:15rem;
@@ -337,6 +402,9 @@ font-size:56px;}
 }
 .last ul li a:hover{
     text-decoration: underline;
+}
+.foot:hover .hello{
+    transform: scaleX(-1rem);
 }
 
 @media only screen and (max-width: 600px) {
