--- a/styles/style.css
+++ b/styles/style.css
@@ -195,6 +195,25 @@ font-size:56px;}
 
     
 }
+.text{
+    font-size:26px;
+
+    }
+    .text:hover .line {
+    width: 0;
+    margin: 0 5px;
+  }
+.line {
+    display: inline-block;
+    position: relative;
+    top: -4px;
+    margin: 0 10px;
+    width: 80px;
+    height: 2px;
+    background: #000;
+    transform: scale(1);
+	transition: 0.4s ease-in;
+}
 .second-img:hover img{
     transform: scale(0.95);
     
@@ -544,4 +563,4 @@ display: none;
           .so1 .bb{
     display: none;
           }
-}
+        }
